force-app/main/default/objects/Voucher_Country__c/Voucher_Country__c.object-meta.xml
<CustomObject>
    <label>Voucher Country</label>
    <nameField>
        <label>Voucher Country Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voucher Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>