force-app/main/default/objects/Voucher_Country__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Voucher Countries</relationshipLabel>
    <relationshipName>Voucher_Countries</relationshipName>
    <type>Lookup</type>
</CustomField>