force-app/main/default/objects/Voucher_Country__c/fields/Max_discount__c.field-meta.xml
<CustomField>
    <fullName>Max_discount__c</fullName>
    <label>Max discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>