force-app/main/default/objects/Voucher_Country__c/fields/Observance_Day__c.field-meta.xml
<CustomField>
    <fullName>Observance_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Observance Day</label>
    <type>Checkbox</type>
</CustomField>