force-app/main/default/objects/Voucher_Country__c/fields/Voucher_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Catalog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voucher Catalog</label>
    <referenceTo>Voucher_Catalog__c</referenceTo>
    <relationshipLabel>Voucher Countries</relationshipLabel>
    <relationshipName>Voucher_Countries</relationshipName>
    <type>Lookup</type>
</CustomField>